@@ -1296,6 +1296,9 @@ _ipmi_acpi_get_table_dev_mem (ipmi_locate_ctx_t ctx,
       { 0, "", 0}
     };
 
+#if defined(__arm__) || defined (__aarch64__)
+  return (-1);
+#endif
   assert (ctx);
   assert (ctx->magic == IPMI_LOCATE_CTX_MAGIC);
   assert (signature);
@@ -1639,9 +1642,6 @@ ipmi_locate_acpi_spmi_get_device_info (ipmi_locate_ctx_t ctx,
   uint64_t val;
   int rv = -1;
 
-#if defined(__arm__) || defined(__aarch64__)
-  return (-1);
-#else
   if (!ctx || ctx->magic != IPMI_LOCATE_CTX_MAGIC)
     {
       ERR_TRACE (ipmi_locate_ctx_errormsg (ctx), ipmi_locate_ctx_errnum (ctx));
@@ -1817,5 +1817,4 @@ ipmi_locate_acpi_spmi_get_device_info (ipmi_locate_ctx_t ctx,
  cleanup:
   fiid_obj_destroy (obj_acpi_spmi_table_descriptor);
   return (rv);
-#endif /* defined(__arm__) || defined(__aarch64__) */
 }
